Closed Bug 949890 Opened 11 years ago Closed 11 years ago

Fix rooting hazard in workers::XMLHttpRequest::Send

Categories

(Core :: DOM: Workers, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

Needs more Handle.
I considered making TypedArray .Obj() return a handle via fromMarkedLocation, since it better be being marked, but I'm not sure how happy I am with that.  So did it the silly way.
Whiteboard: [need review]
https://hg.mozilla.org/integration/mozilla-inbound/rev/9b482173a23c
Flags: in-testsuite+
Whiteboard: [need review]
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: