Bug 949890.  Fix rooting hazard in workers::XMLHttpRequest::Send.  r=khuey