dom/workers/XMLHttpRequest.h
@@ -160,23 +160,13 @@ public:
   Send(const nsAString& aBody, ErrorResult& aRv);
 
   void
-  Send(JSObject* aBody, ErrorResult& aRv);
+  Send(JS::Handle<JSObject*> aBody, ErrorResult& aRv);
 
   void
-  Send(JSObject& aBody, ErrorResult& aRv)
-  {
-    Send(&aBody, aRv);
-  }
+  Send(const ArrayBuffer& aBody, ErrorResult& aRv);
 
   void
-  Send(const ArrayBuffer& aBody, ErrorResult& aRv) {
-    return Send(aBody.Obj(), aRv);
-  }
-
-  void
-  Send(const ArrayBufferView& aBody, ErrorResult& aRv) {
-    return Send(aBody.Obj(), aRv);
-  }
+  Send(const ArrayBufferView& aBody, ErrorResult& aRv);
 
   void
   SendAsBinary(const nsAString& aBody, ErrorResult& aRv);
